<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sticker Scanner</string>
    <string name="title_activity_scanning">ScanningActivity</string>
    <string name="title_activity_stickers">StickersActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_check_stickers">Your stickers</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_send">Send</string>
    <string name="sync_button">Sync</string>
    <string name="sync_with_tv">To connect your Sticker Album account you need to sync with your TV. Please enter the code provided to you:</string>
    <string name="enter_code_hint">Enter your code</string>
    <string name="sticker_img_desc">Sticker image</string>
    <string name="action_camera_img_desc">Take picture of sticker</string>
    <string name="hello_world">Hello world!</string>
    <string name="sorry_message">Sorry.</string>
    <string name="no_camera_app">There is no application to take pictures. Please install one.</string>
    <string name="error_create_file">An error occurred while trying to create the image file, maybe there is no permission?</string>
    <string name="please_wait">Uw sticker wordt verstuurd. Een moment geduld a.u.b.</string>
    <string name="loading_images">Loading images</string>
    <string name="sending_stickers">Sending stickers</string>
    <string name="pending_status">Pending</string>
    <string name="sending_status">Versturen</string>
    <string name="title_activity_scan">ScanActivity</string>
    
    <string name="sticker_added">%s is toegevoegd aan je album! Open de Smart TV applicatie om je sticker met extra informatie te bekijken!</string>
    <string name="no_matches">Je sticker is niet herkend, probeer het opnieuw.</string>
    <string name="error">Unknown error</string>

</resources>