<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <CheckBox
        android:id="@+id/stickerImgCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/stickerImageView"
        android:text="@string/hello_world" />

    <ImageView
        android:id="@+id/stickerImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:contentDescription="@string/sticker_img_desc"
        android:src="@drawable/ic_launcher" />

    <ProgressBar
        android:id="@+id/imageProgressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/stickerImgCheckBox"
        android:layout_marginLeft="7dp"
        android:text="@string/pending_status"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>